Fixed dealspage button styling/spacing

--- a/src/containers/DealsPage/DealsPage.module.scss
+++ b/src/containers/DealsPage/DealsPage.module.scss
@@ -33,8 +33,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-evenly;
-        // padding: 10px;
+        justify-content: space-around;
         background-color: $color-lightgreen;
 
         .location {
@@ -52,7 +51,6 @@
 
             .faActive {
                 color: $color-green;
-                // font-size: 4rem;
                 height: 40px;
                 width: 40px;
             }
@@ -60,14 +58,9 @@
 
         .profilelink {
             display: flex;
-         //   position: fixed;
-            height: 200px;
-            width: 200px;
             font-size: 200%;
             z-index: 10;
             top: 15px;
-            justify-content: center;
-            align-items: center;
             padding: 0;
             margin: 0;
 
